fixin z-index for #1

--- a/Client/public/stylus/index.styl
+++ b/Client/public/stylus/index.styl
@@ -124,6 +124,7 @@
 		// background blue
 		.settings
 			position absolute
+			z-index 3
 			display none
 			top 100%
 			right 0
